
  o Fixed bug in LinearHypothesis.merMod() when rhs of "F" test is specified (reported by Patrick Forscher).
  
  o Anova.lm() now computes SSs by model comparison for models with aliased coefficients (response to problem reported by Ruchi Mahadeshwar).

  o Introduced carPalette() for color selection.
  
  o new bcnPowerAxis() function for bcnPower() transformations.

  o Various small improvements and fixes.

Changes to Version 2.1-6

  o Made several functions compatible with vcov() in R-devel (3.5.0).

Changes to Version 2.1-5

  o Fixed bug in boot.hist, and made Boot.default more general.  Added a vcov method for boot objects
  
  o Fixed bug in gamLine with non-dentity links.
  
  o Removed the skewPower transformation functions, and added bcnPower transformation family. Same transformation, new name, new computational algorithms, improved documentation.
  
  o Fixed bug (reported by Bruno Hebling Vieira) in print.summary.Anova.mlm() that could cause adjusted p-values to be incorrectly ordered.

Changes to Version 2.1-4

  o The smoother functions loessLine, gamLine and quantregLine used in many car functions now evaluate the smoother at an equally spaced grid of points rather than at the observed values on the horizontal axis of a plot.
  
  o spreadLevelPlot.lm now accepts point marking as in most other graphical functions in car.
  
  o Bug fixed in one of the skewPower support functions; thans to Balazs Banfai
  
  o Added support for lmer objects in power transformations
  
  o Added support for skewPower family power transformations for lm and lmer objects
  
  o Added list, data.frame, and matrix methods for Boxplot(), suggestion of Michael Friendly
  
  o Added adaptiveKernel() density estimator, with option to use it in densityPlot().
  
Changes to Version 2.1-3

  o Corrected documentation for mcPlots
  
  o added id.location argument to showLabels to vary location of labels
  